# zyc_getset

./: Cargo.toml  README.md
examples/: simple.rs
src/: generate.rs  lib.rs
tests/: clone_getters.rs  copy_getters.rs  getset.rs  getters.rs  mut_getters.rs  raw_identifiers.rs  setters.rs  skip.rs
