[package]
authors = ["Ana Hobden <ana@hoverbear.org>", "John Baublitz <john.m.baublitz@gmail.com", "Zhangyc <jerrybaixy@gmail.com"]
description = """
The current 'crate' is an extension to 'getset'.
Mainly added 'get_clone' to return cloned objects of fields,
Return 'Option<&T>' for 'Option<T>', and the method defaults to the 'pub' level.
"""
edition = "2018"
license = "MIT"
name = "zyc_getset"
version = "0.0.3"

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "getter", "setter", "getters", "setters"]
readme = "README.md"
repository = "https://github.com/jerrybaxia/zyc_getset.git"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2"
proc-macro2 = {version = "1", default-features = false}
quote = "1"
syn = "2"
